--- a/market.html
+++ b/market.html
@@ -10,10 +10,18 @@
 </head>
 <body>
     <div class="feira-container">
+        <header>
+            <div class="header">
+                <div class="logo-img">
+                    <img src="image/Balaio.png" alt="Logo">
+                </div>
+                
+                <h1>Feira</h1>
+            </div>>
+        </header>
         <div class="cards">
 
         </div>
-        
     </div>
 </body>
 </html>
