--- a/market.html
+++ b/market.html
@@ -11,16 +11,28 @@
 <body>
     <div class="feira-container">
         <header>
-            <div class="header">
+            <div class="header-container">
                 <div class="logo-img">
-                    <img src="image/Balaio.png" alt="Logo">
+                    <img src="image/Balaio02.png" alt="Logo">
                 </div>
-                
-                <h1>Feira</h1>
-            </div>>
+                <div class="title">
+                    <h1>Feira da Rua São joão da Silva</h1>
+                    <h2>Av. Bairro, 234</h2>
+                </div>
+                <nav>
+                    <div class="menu">
+                        <ul>
+                            <li><a href="map.html">Mapa</a></li>
+                            <li><a href="#">Carrinho</a></li>
+                            <li><a href="#">Agenda</a></li>
+                            <li><a href="#">Perfil</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
         </header>
         <div class="cards">
-
+            
         </div>
     </div>
 </body>
