--- a/market.html
+++ b/market.html
@@ -15,7 +15,7 @@
                 <div class="logo-img">
                     <img src="image/Balaio02.png" alt="Logo">
                 </div>
-                <div class="title">
+                <div class="feira-title">
                     <h1>Feira da Rua São joão da Silva</h1>
                     <h2>Av. Bairro, 234</h2>
                 </div>
@@ -32,7 +32,7 @@
             </div>
         </header>
         <div class="cards">
-            
+
         </div>
     </div>
 </body>
