Adicionei a aba das feira
Em processo.

--- a/market.html
+++ b/market.html
@@ -11,25 +11,46 @@
 <body>
     <div class="feira-container">
         <header>
-            <div class="header-container">
-                <div class="logo-img">
-                    <img src="image/Balaio02.png" alt="Logo">
-                </div>
-                <div class="feira-title">
-                    <h1>Feira da Rua São joão da Silva</h1>
-                    <h2>Av. Bairro, 234</h2>
-                </div>
-                <nav>
-                    <div class="menu">
-                        <ul>
-                            <li><a href="map.html">Mapa</a></li>
-                            <li><a href="#">Carrinho</a></li>
-                            <li><a href="#">Agenda</a></li>
-                            <li><a href="#">Perfil</a></li>
-                        </ul>
-                    </div>
-                </nav>
+            <div class="logo-img">
+                <img src="image/Balaio02.png" alt="Logo">
             </div>
+            <div class="feira-title">
+                <h1>Feira da Rua São joão da Silva</h1>
+                <h2>Av. Bairro, 234</h2>
+            </div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="map.html">Mapa</a></li>
+                    <li><a href="#">Carrinho</a></li>
+                    <li><a href="#">Agenda</a></li>
+                    <li><a href="#">Perfil</a></li>
+                </ul>
+            </nav>
+            <!--<section class="cards-container">
+                <div>
+
+                </div>
+            </section>-->
+            <main class="cards">
+                <section class="card">
+                    <div class="icon">
+                        <img src="image/veio1-650.jpg" alt="Feirante 1">
+                    </div>
+                    <h3>Vendinha do seu Zé</h3>
+                </section>
+                <section class="card">
+                    <div class="icon">
+                        <img src="image/veia2-650.jpg" alt="Feirante 2">
+                    </div> 
+                    <h3>Loja da Dona Ivone</h3>
+                </section>
+                <section class="card">
+                    <div class="icon">
+                        <img src="image/veia3-650.jpg" alt="Feirante 3">
+                    </div>
+                    <h3>Barraca da Leila </h3>
+                </section>
+            </main>
         </header>
         <div class="cards">
 
