Melhoria nos botões e avanço na tela de feira - 1.4

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="login-button">
-                    <button><a href="map.html">Login</a></button>
+                    <button><a href="market.html">Login</a></button>
                 </div>
             </form>
         </div>
