--- a/market.html
+++ b/market.html
@@ -12,7 +12,7 @@
     <div class="feira-container">
         <header>
             <div class="logo-img">
-                <img src="image/Balaio02.png" alt="Logo">
+                <a href="index.html"><img src="image/Balaio02.png" alt="Logo"></a>
             </div>
             <div class="feira-title">
                 <h1>Feira da Rua São joão da Silva</h1>
@@ -26,12 +26,18 @@
                     <li><a href="#">Perfil</a></li>
                 </ul>
             </nav>
-            <!--<section class="cards-container">
+            <section class="cards-container">
                 <div>
-
+                    <img src="image/veio1-1200.jpg" alt="">
                 </div>
-            </section>-->
-            <main class="cards">
+                <div>
+                    <img src="image/veia2-1200.jpg" alt="">
+                </div>
+                <div>
+                    <img src="image/veia3-1200.jpg" alt="">
+                </div>
+            </section>
+            <!--<main class="cards">
                 <section class="card">
                     <div class="icon">
                         <img src="image/veio1-650.jpg" alt="Feirante 1">
@@ -50,7 +56,7 @@
                     </div>
                     <h3>Barraca da Leila </h3>
                 </section>
-            </main>
+            </main>-->
         </header>
         <div class="cards">
 
