--- a/market.html
+++ b/market.html
@@ -15,7 +15,7 @@
                 <a href="index.html"><img src="image/Balaio02.png" alt="Logo"></a>
             </div>
             <div class="feira-title">
-                <h1>Feira da Rua São joão da Silva</h1>
+                <h1>Feira da Mangueira</h1>
                 <h2>Av. Bairro, 234</h2>
             </div>
             <nav class="menu">
@@ -26,41 +26,33 @@
                     <li><a href="#">Perfil</a></li>
                 </ul>
             </nav>
-            <section class="cards-container">
-                <div>
-                    <img src="image/veio1-1200.jpg" alt="">
-                </div>
-                <div>
-                    <img src="image/veia2-1200.jpg" alt="">
-                </div>
-                <div>
-                    <img src="image/veia3-1200.jpg" alt="">
-                </div>
-            </section>
-            <!--<main class="cards">
-                <section class="card">
-                    <div class="icon">
-                        <img src="image/veio1-650.jpg" alt="Feirante 1">
-                    </div>
-                    <h3>Vendinha do seu Zé</h3>
-                </section>
-                <section class="card">
-                    <div class="icon">
-                        <img src="image/veia2-650.jpg" alt="Feirante 2">
-                    </div> 
-                    <h3>Loja da Dona Ivone</h3>
-                </section>
-                <section class="card">
-                    <div class="icon">
-                        <img src="image/veia3-650.jpg" alt="Feirante 3">
-                    </div>
-                    <h3>Barraca da Leila </h3>
-                </section>
-            </main>-->
         </header>
-        <div class="cards">
-
-        </div>
+        <section class="cards-container">
+            <div class="card">
+                <img src="image/feirante1-1200.jpg" alt="">
+                <h2>Vendinha do seu zé</h2>
+            </div>
+            <div class="card">
+                <img src="image/feirante2-1200.jpg" alt="">
+                <h2>Dona Ivone</h2>
+            </div>
+            <div class="card">
+                <img src="image/feirante3-1200.jpg" alt="">
+                <h2>Frescajainha</h2>
+            </div>
+            <div class="card">
+                <img src="image/feirante4-1200.jpeg" alt="">
+                <h2>Aracajú Verde</h2>
+            </div>
+            <div class="card">
+                <img src="image/feirante5-1200.png" alt="">
+                <h2>Verduras da Edna</h2>
+            </div>
+            <div class="card">
+                <img src="image/feirante6-1200.png" alt="">
+                <h2>Mangaba do Sertão</h2>
+            </div>
+        </section>
     </div>
 </body>
 </html>
